--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="footer">
-  <a class="circle active" href="character.html" aria-label="Character">
+  <a class="circle active" href="index.html" aria-label="Character">
     <i class="fa-solid fa-user"></i>
   </a>
   <a class="circle" href="item.html" aria-label="Items">
