--- a/setting.html
+++ b/setting.html
@@ -9,6 +9,23 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+
+<!-- Hamburger + Theme Toggle -->
+<div class="top-bar">
+  <button id="hamburger" aria-label="Menu">&#9776;</button>
+  <button id="themeToggle" aria-label="Toggle Theme">
+    <i id="themeIcon" class="fa-solid fa-moon"></i>
+  </button>
+</div>
+
+<!-- Sidebar Drawer -->
+<nav id="sidebar" class="sidebar hidden">
+  <a href="index.html"><i class="fa-solid fa-user"></i> Character</a>
+  <a href="item.html"><i class="fa-solid fa-shirt"></i> Items</a>
+  <a href="setting.html"><i class="fa-solid fa-gear"></i> Settings</a>
+</nav>
+
+
   <div class="screen">
     <div class="header">
       <div class="title">Setting</div>
